--- a/main.html
+++ b/main.html
@@ -1,8 +1,27 @@
 <html>
   <head>
     <title>Facebook Login</title>
+	  <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
     <!-- Write your code here -->
+	  <section class="left">
+		  <div class="facebook">
+			  <img src="https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg" alt="Facebook logo">
+			  <p>Facebook helps you connect and share with the people in your life.</p>
+		  </div>
+	  </section>
+	  <section class="right">
+		  <div class="facebook">
+			  <form>
+				  <input type="text" id="email" placeholder="Email address or phone number">
+				  <input type="password" id="password" placeholder="Password">
+				  <button type="submit">Log in</button>
+				  <a href="#">Forgotten account?</a>
+				  <button class="signup">Create new account</button>
+			  </form>
+		  </div>
+		  
+	  </section>
   </body>
 </html>
